apps/services/hound/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hound-server
  name: hound-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hound-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hound-server
    spec:
      containers:
        - env:
            - name: HOUND_SECRET
              valueFrom:
                secretKeyRef:
                  key: hound_secret
                  name: hound-server-secret
            - name: POSTGRES_DB
              value: hound_db
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgres_password
                  name: hound-server-secret
            - name: POSTGRES_USER
              value: hound
          image: houndmediaserver/hound:latest
          imagePullPolicy: Always
          name: hound-server
          ports:
            - containerPort: 2323
              protocol: TCP
          volumeMounts:
            - mountPath: /app/Hound Data
              name: hound-server-pvc
            - mountPath: /app/External Library/Movies
              name: hound-movies
            - mountPath: /app/External Library/TV
              name: hound-tv
      restartPolicy: Always
      volumes:
        - name: hound-server-pvc
          persistentVolumeClaim:
            claimName: hound-server-pvc
        - name: hound-movies
          nfs:
            path: /mnt/cronenberg/movies
            server: 192.168.1.182
        - name: hound-tv
          nfs:
            path: /mnt/cronenberg/tv
            server: 192.168.1.182
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hound-postgres
  name: hound-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hound-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hound-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: hound_db
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgres_password
                  name: hound-server-secret
            - name: POSTGRES_USER
              value: hound
            - name: POSTGRES_HOST
              value: "hound-postgres.hound.svc.cluster.local"
            - name: POSTGRES_PORT
              value: "5432"
          image: postgres:18
          livenessProbe:
            exec:
              command:
                - pg_isready -U hound -d hound_db
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: hound-postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: hound-postgres-pvc
      restartPolicy: Always
      volumes:
        - name: hound-postgres-pvc
          persistentVolumeClaim:
            claimName: hound-postgres-pvc
