apps/services/hound/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hound-server
  name: hound-server
spec:
  ports:
    - name: "2323"
      port: 2323
      targetPort: 2323
  selector:
    app.kubernetes.io/name: hound-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hound-postgres
  name: hound-postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: hound-postgres
