apps/services/hound/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hound
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Hound Media Server
    gethomepage.dev/group: Media
    gethomepage.dev/icon: hound.png
    gethomepage.dev/name: Hound
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: hound.internal
      http:
        paths:
          - backend:
              service:
                name: hound-server
                port:
                  number: 2323
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hound.internal
      secretName: homelab-tls
